--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
 PORT=4000
-MONGO_URI=mongodb+srv://sona:sona123@threadsapp.scz5gdt.mongodb.net/?retryWrites=true&w=majority
+MONGO_URI=mongodb+srv://sona123:sona123@threadsapp.scz5gdt.mongodb.net/?retryWrites=true&w=majority
 
-EMAIL=Sona.cse.sympo@gmail.com
-PASS=sabzvrimgumxfihr
+EMAIL=threads24@sonacse.in
+PASS=Sonacse@24
